# scripts

./: CRUD.ipynb  CRUD2.ipynb  README.md  crud.py
autos/: autos.xlsx
autos_usados/: pyproject.toml
autos_usados/src/: main.py
curva_s/: cronograma.xlsx  curva.xlsx  pyproject.toml
curva_s/src/: main.py
game/src/: main.py
libtopo/: pyproject.toml
libtopo/test/: test_utils.py
listbox/src/: dialog.py  logica.py  main.py  win_main.py
person/: main.py
prog/: ptos.csv  ptos_control_cali.xlsx  pyproject.toml
prog/lib/: topo-1.0.3.tar
prog/src/: main.py
prog1/: datos.csv  main.py  pyproject.toml
prog1/src/: main.py
prog2/: autos.csv  main.py  myfunciones.py  pyproject.toml
prog2/src/: main.py
test_polars/: pyproject.toml
test_polars/src/: main.py
themes_ttk/: pyproject.toml
themes_ttk/src/: main.py
topo/: pyproject.toml
topo/src/topo/: __init__.py  cogo.py
topo/test/: test_utils.py
transformacion/: main.py
win/: pyproject.toml
win/src/: main.py  win_main.py  winmain.py
