[project]
name = "prog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libtopo",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
]

[tool.uv.sources]
libtopo = { path = "../libtopo/dist/libtopo-1.0.8.tar.gz" }
